basiliq/src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__normal__missing_field.snap
---
source: basiliq/src/serve/tests/requests/create/normal.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "BadJson",
    "detail": "Missing key `last-name` at line 1 column 24"
  }
}
