basiliq/src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__normal__only_mandatory_fields.snap
---
source: basiliq/src/serve/tests/requests/create/normal.rs
expression: res

---
{
  "type": "public__peoples",
  "id": "[uuid]",
  "attributes": {
    "age": null,
    "first-name": "Francis",
    "gender": null,
    "last-name": "it's me",
    "twitter": null
  }
}
