basiliq/src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__normal__with_optional_fields.snap
---
source: basiliq/src/serve/tests/requests/create/normal.rs
expression: res

---
{
  "type": "public__peoples",
  "id": "[uuid]",
  "attributes": {
    "age": 22,
    "first-name": "Francis",
    "gender": "M",
    "last-name": "it's me",
    "twitter": "@myhandle"
  }
}
